Creation of the phases for the flow of the game.